# CryptoJackal

./: .env  .env.example  .gitignore  Cargo.toml  DEVELOPMENT_GUIDE.md  Dockerfile  INTEGRATION_GUIDE.md  Makefile  README.md  SETUP_GUIDE.md  config.example.json  demo.rs  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  proxmox-setup.sh  run_demo.sh  setup.sh  test_demo.rs
abi/: erc20.json
cmd/cryptojackal/: main.go
cmd/demo/: main.go
docs/: DEVELOPMENT_GUIDE.md  architecture.md  configuration.md  liquidity_pair_detection.md  price_feed_monitoring.md  transaction_signing_workflow.md
gtm/: gtm_strategy.md
internal/api/: server.go
internal/api/handlers/: handlers.go
internal/api/middleware/: middleware.go
internal/api/templates/: index.html
internal/config/: config.go  config_test.go
internal/discovery/: coingecko.go  dexscreener.go  discovery.go
internal/models/: models.go  models_test.go
internal/paper/: paper.go  paper_test.go
internal/storage/: storage.go  storage_test.go
internal/trading/: engine.go
internal/wallet/: wallet.go
mvp/: feature_prioritization.md  mvp_canvas.md  validation_checklist.md
pr/: pull_request_template.md
prd/: product_requirements.md
src/: demo.rs  demo_bin.rs  error.rs  integration_tests.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  setup.rs
src/core/: config.rs  dex_monitor.rs  gas_optimizer.rs  market.rs  mod.rs  price_feed.rs  transaction_signing.rs  types.rs
src/core/order_queue/: mod.rs  tests.rs
src/discovery/: coingecko.rs  dexscreener.rs  mod.rs  security.rs
src/monitoring/: mod.rs
src/paper_trading/: historical_data.rs  mod.rs  portfolio.rs  simulator.rs
src/security/: mod.rs
src/testing/: backtesting.rs  integration_tests.rs  mod.rs  performance_tests.rs  security_tests.rs
src/trading/: mod.rs
src/utils/: mod.rs
src/wallet/: mod.rs
templates/: current_tasks.md  cursor_ai_enhanced_prompt.md  cursor_prompt_detailed.md  initial_task_breakdown.md  junior_developer_guidelines.md  master_planning.md  task_breakdown.md  task_status.md  windsurf_prompt_detailed.md
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Layout.tsx  SetupWizard.tsx  Toast.tsx
web/src/hooks/: useApi.ts
web/src/lib/: api.ts
web/src/pages/: Dashboard.tsx  Discovery.tsx  Help.tsx  Login.tsx  PaperTrading.tsx  Portfolio.tsx  Settings.tsx  SetupWizard.tsx  Tokens.tsx  TradeHistory.tsx  Trading.tsx
web/src/types/: index.ts
