[package]
name = "cryptojackal"
version = "0.1.0"
edition = "2021"
authors = ["CryptoJackal Team <team@cryptojackal.dev>"]
description = "A high-performance cryptocurrency sniper bot with MetaMask integration"
license = "MIT"
repository = "https://github.com/cryptojackal/cryptojackal"
keywords = ["cryptocurrency", "trading", "defi", "uniswap", "sniper"]
categories = ["finance", "web-programming", "api-bindings"]

[dependencies]
# Ethereum and Web3 integration
web3 = "0.19.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
secp256k1 = "0.27.0"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.48"

# Logging and debugging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Configuration
config = "0.13.3"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# API clients
reqwest = { version = "0.11.20", features = ["json"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"

# Utilities
chrono = "0.4.31"
futures = "0.3.28"
futures-util = "0.3.28"
async-trait = "0.1.73"
hex = "0.4.3"

# Testing
mockall = "0.11.4"
tokio-test = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"
test-case = "3.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
