[package]
name = "cryptojackal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance cryptocurrency sniper bot with MetaMask integration"

[[bin]]
name = "demo"
path = "src/demo_bin.rs"

[dependencies]
# Ethereum and Web3 integration
web3 = "0.19.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
secp256k1 = "0.27.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum/Blockchain
ethers = "2.0"
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-middleware = "2.0"
web3 = "0.19"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Database (optional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Redis (optional)
redis = { version = "0.23", features = ["tokio-comp"], optional = true }

# Metrics
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["database", "redis"]
database = ["sqlx"]
redis = ["dep:redis"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
